--- a/src/app/pages/customer-information-screen/contact-medium-information/contact-medium-information.html
+++ b/src/app/pages/customer-information-screen/contact-medium-information/contact-medium-information.html
@@ -32,18 +32,22 @@
             </div>
 
             <div class="relative">
-                <label class="block text-sm font-medium text-gray-700 mb-1">Mobile Phone <span class="text-red-500">*</span></label>
-                <input 
-                    formControlName="mobilePhone" 
-                    type="text" 
-                    [readonly]="!isEditing"
-                    [ngClass]="{
-                        'bg-gray-100/50 border-gray-300 shadow-inner-custom text-gray-800 cursor-default': !isEditing, 
-                        'border-orange-400 focus:ring-orange-500 focus:border-orange-500 shadow-lg': isEditing
-                    }" 
-                    class="mt-1 block w-full rounded-xl border p-3.5 transition duration-200 focus:outline-none focus:ring-1"
-                />
-            </div>
+    <label class="block text-sm font-medium text-gray-700 mb-1">Mobile Phone <span class="text-red-500">*</span></label>
+    <input 
+        #mobilePhoneInput
+        [value]="formatPhoneNumber(contactForm.get('mobilePhone')?.value || '')"
+        (input)="onMobilePhoneInput($event)"
+        type="text" 
+        [readonly]="!isEditing"
+        maxlength="14"
+        placeholder="(555) 123-4567"
+        [ngClass]="{
+            'bg-gray-100/50 border-gray-300 shadow-inner-custom text-gray-800 cursor-default': !isEditing, 
+            'border-orange-400 focus:ring-orange-500 focus:border-orange-500 shadow-lg': isEditing
+        }" 
+        class="mt-1 block w-full rounded-xl border p-3.5 transition duration-200 focus:outline-none focus:ring-1"
+    />
+</div>
 
             <div class="relative">
                 <label class="block text-sm font-medium text-gray-700 mb-1">Home Phone</label>
