--- a/src/app/pages/customer-create/customer-info/customer-info/customer-info.html
+++ b/src/app/pages/customer-create/customer-info/customer-info/customer-info.html
@@ -248,7 +248,12 @@
               <button
                 (click)="next()"
                 type="button"
-                class="px-6 py-2 border border-gray-300 text-gray-700 rounded-md shadow-md bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500 text-base font-medium"
+                [disabled]="form.invalid" 
+                class="px-6 py-2 border border-gray-300 text-gray-700 rounded-md shadow-md 
+           bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 
+           focus:ring-offset-2 focus:ring-orange-500 text-base font-medium
+           transition ease-in-out duration-150
+           disabled:opacity-50 disabled:cursor-not-allowed" 
               >
                 Next
               </button>
