--- a/src/app/pages/customer-create/customer-info/customer-info/customer-info.html
+++ b/src/app/pages/customer-create/customer-info/customer-info/customer-info.html
@@ -30,10 +30,29 @@
         </div>
 
         <div class="flex text-center font-medium bg-orange-500/90 text-white shadow-md">
-          <div class="flex-1 py-3 border-b-2 border-amber-300 bg-orange-600/90">Customer Info</div>
-          <div class="flex-1 py-3 hover:bg-orange-500/80 cursor-pointer">Address</div>
-          <div class="flex-1 py-3 hover:bg-orange-500/80 cursor-pointer">Contact Medium</div>
-        </div>
+  <div 
+  class="flex-1 py-3" 
+  [ngClass]="currentStep === 1 ? 'border-b-2 border-amber-300 bg-orange-600/90' : 'hover:bg-orange-500/80 cursor-pointer'" 
+  (click)="goToStep(1)">
+  Customer Info
+</div>
+
+<div 
+  class="flex-1 py-3" 
+  [ngClass]="currentStep === 2 ? 'border-b-2 border-amber-300 bg-orange-600/90' : 'hover:bg-orange-500/80 cursor-pointer'" 
+  (click)="goToStep(2)">
+  Address
+</div>
+
+<div 
+  class="flex-1 py-3" 
+  [ngClass]="currentStep === 3 ? 'border-b-2 border-amber-300 bg-orange-600/90' : 'hover:bg-orange-500/80 cursor-pointer'" 
+  (click)="goToStep(3)">
+  Contact Medium
+</div>
+
+</div>
+
 
         <div class="p-6 md:p-8">
           <form [formGroup]="form" class="space-y-6">
