fr2-1 test case finished

--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -190,7 +190,7 @@
   <aside class="sidebar">
     <nav>
       <div class="nav-main">
-        <a routerLink="/customer-create/customer-info"  href="#b2c" class="nav-item active" onclick="setActive(this)">
+        <a  class="nav-item active" onclick="setActive(this)">
           <i class="fa fa-users" aria-hidden="true"></i>
           <span>B2C</span>
         </a>
