fr2 - 3 test case fixed

--- a/src/app/pages/customer-search/customer-search.html
+++ b/src/app/pages/customer-search/customer-search.html
@@ -256,7 +256,7 @@
             <tbody class="bg-white divide-y divide-gray-100">
               <tr
                 *ngFor="let customer of searchResults; let i = index"
-                class="hover:bg-orange-50 cursor-pointer transition duration-100"
+                class="hover:bg-orange-50  transition duration-100"
               >
                 <td
                   class="px-4 py-3 whitespace-nowrap text-sm font-medium text-orange-600 underline cursor-pointer"
