--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -19,9 +19,9 @@
   <div class="flex items-center space-x-6 text-white text-base">
     <!-- Dil seçimi -->
     <div class="flex items-center font-medium">
-      <span class="cursor-pointer">EN</span>
+      <span >EN</span>
       <span class="mx-2 text-gray-400">|</span>
-      <span class="cursor-pointer opacity-70 hover:opacity-100 transition-opacity">TR</span>
+      <span class=" opacity-70  transition-opacity">TR</span>
     </div>
 
     <!-- Giriş durumu -->
